Fixed bug: Social links not working due to z-index problem

--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -104,7 +104,7 @@
 
 /** Image modal **/
 
-.modal:not(.fade) {
+.modal:not(.show) {
     z-index: -1;
 }
 
